--- a/index.htm
+++ b/index.htm
@@ -44,6 +44,9 @@
       <hr>
 
       <div class="box3" style="float: right;">tredje boks</div>
-     
+
+      <aside>
+         This is the first addition to the test in GitHub
+      </aside>
  </body>
 </html>
