Second addition test

--- a/index.htm
+++ b/index.htm
@@ -48,5 +48,9 @@
       <aside>
          This is the first addition to the test in GitHub
       </aside>
+
+      <section>
+         This is the second addition to the test in GitHub
+      </section>
  </body>
 </html>
