--- a/index.htm
+++ b/index.htm
@@ -52,5 +52,9 @@
       <section>
          This is the second addition to the test in GitHub
       </section>
+
+      <section>
+         This is the third addition to the test in GitHub
+      </section>
  </body>
 </html>
