--- a/index.htm
+++ b/index.htm
@@ -56,5 +56,9 @@
       <section>
          This is the third addition to the test in GitHub
       </section>
+
+      <aside>
+         This is the test for desktop GitHub
+      </aside>
  </body>
 </html>
