--- a/project.html
+++ b/project.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <main>
-        <div>
-
+        <div class="middel-text">
+            <h1>Find your inspiration.</h1>
+            <h3>Join the Flickr community, home to tens of billions of photos and 2 million groups.</h3>
         </div>
-        <img src=""
     </main>
 </body>
 </html>
