--- a/project.html
+++ b/project.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <main>
+    <main class="main-flex">
         <div class="middel-text">
             <h1>Find your inspiration.</h1>
             <h3>Join the Flickr community, home to tens of billions of photos and 2 million groups.</h3>
+        </div>
+        <a class="free-button" href="link">Start for free</a>
+        <div class="credit">
+            <p id="imageName">image name</p>
+            <P id="author">author</P>
         </div>
     </main>
 </body>
