main almost done

--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
             <h1>Find your inspiration.</h1>
             <h3>Join the Flickr community, home to tens of billions of photos and 2 million groups.</h3>
         </div>
-        <a class="free-button" href="link">Start for free</a>
+        <a class="free-button" href="link"><h3>Start for free</h3></a>
         <div class="credit">
             <p id="imageName">image name</p>
             <P id="author">author</P>
