--- a/project.html
+++ b/project.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <main class="main-flex">
-        <div class="middel-text">
-            <h1>Find your inspiration.</h1>
-            <h3>Join the Flickr community, home to tens of billions of photos and 2 million groups.</h3>
+    <main class="main-container">
+        <div class="middel-text-container">
+            <div class="text">
+                <h1>Find your inspiration.</h1>
+                <h3>Join the Flickr community, home to tens of billions of photos and 2 million groups.</h3>
+            </div>
+            <a class="free-button" href="link"><h3>Start for free</h3></a>
         </div>
-        <a class="free-button" href="link"><h3>Start for free</h3></a>
         <div class="credit">
             <p id="imageName">image name</p>
             <P id="author">author</P>
